# distrimuse-ros2-api

./: CMakeLists.txt  README.md  package.xml  pixi.toml
msg/: AitekDetectedPerson.msg  AitekDetectionResult.msg  AitekPersonBehavior.msg  DetectedPerson.msg  DetectionResult.msg  EmojDetectedPerson.msg  EmojDetectionResult.msg  EmojPersonJointPosition.msg  PersonBehavior.msg  PersonJointPosition.msg  PumacyActivity.msg  RelabOperatorInput.msg  RelabPalletStatusUpdate.msg  RobotBehavior.msg  RulexAreaScore.msg  RulexDetectionResult.msg  SrAreaActivity.msg  SrFusionModelOutput.msg  SrPalletState.msg  SrRobotSystemState.msg  UnigraResult.msg
tests/: test_ros2_msgs.py
