<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>distrimuse_ros2_api</name>
  <version>0.1.0</version>
  <description>DistriMuSe ROS2 message definitions</description>
  <maintainer email="dmartins@smart-robotics.nl">dmartins</maintainer>
  <license>TODO</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
